...

        </TableRow>

        <!--Fajr-->
        <TableRow>

            <CheckBox android:id="@+id/cb_fajr" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/fajr"
                android:fontFamily="@font/sourcesanspro_bold" />

            <TextView
                android:id="@+id/tv_fajr_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
...
        </TableRow>

        <!--Dhuhur-->
        <TableRow>

            <CheckBox
                android:id="@+id/cb_dhuhr"
                android:layout_width="@dimen/list_width_size"
                android:layout_height="@dimen/list_width_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/dhuhr"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dhuhr_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
...
        </TableRow>

        <!--Asr-->
        <TableRow>

            <CheckBox
                android:id="@+id/cb_asr"
                android:layout_width="@dimen/list_width_size"
                android:layout_height="@dimen/list_width_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/asr"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_asr_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
        </TableRow>

        <!--Maghrib-->
        <TableRow>

            <CheckBox android:id="@+id/cb_maghrib" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/maghrib"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_maghrib_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
        </TableRow>

        <!--Isha-->
        <TableRow>

            <CheckBox android:id="@+id/cb_isha" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp4"
                android:gravity="start|center"
                android:text="@string/isha"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_isha_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp8"
                android:gravity="end|center"
                android:text="@string/loading"
                android:textStyle="bold" />
...
