...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_700"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_quran_ayah_quote_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
...
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8">

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="@dimen/dp8"
                android:src="@drawable/ic_baseline_refresh_24" />

        </LinearLayout>
...
